[package]
name = "cum-engine"
version = "0.1.0"
authors = ["Matias Kotlik <mdkotlik@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.4.5" }
rocket_contrib = { version = "0.4.5", default-features = false, features = ["handlebars_templates", "serve"] }
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.8"
lazy_static = "1.4"
anyhow = "1.0"