[package]
name = "milk-engine"
version = "0.1.0"
repository = "https://github.com/qmatias/milk-engine"
readme = "README.md"
authors = ["Matias Kotlik <mdkotlik@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket" }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket", default-features = false, features = ["handlebars_templates", "diesel_sqlite_pool", "serve"] }
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.8"
anyhow = "1.0"
log = "0.4"
diesel = { version = "1.3", features = ["sqlite", "r2d2", "chrono"] }
diesel_migrations = "1.3"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "0.2", features = ["io-util"] }
rand = "0.8"
